--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,9 @@ cmake_minimum_required(VERSION 3.30)
 # Specify the list of languages used
 project(cmake_examples VERSION 1.0 LANGUAGES CXX)
 
+add_library(awesome SHARED)
+target_sources(awesome PRIVATE awesome.cpp)
+add_library(awesome::awesome ALIAS awesome)
+
 add_executable(hello_world hello_world.cpp)
+target_link_libraries(hello_world PUBLIC awesome::awesome)
