--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ cmake_minimum_required(VERSION 3.30)
 # Do NOT use a variable for the name of the project
 project(cmake_examples VERSION 1.0 LANGUAGES CXX)
 
+enable_testing()
+
 # Recommended practices:
 # Do NOT use a variable for the name of the library
 # Do NOT use "lib" in the name of the library
@@ -23,3 +25,8 @@ add_executable(hello_world hello_world.cpp)
 # Recommended practice:
 # Always specify PRIVATE, PUBLIC, or INTERFACE keywords
 target_link_libraries(hello_world PUBLIC awesome::awesome)
+
+
+add_executable(awesome_unit_tests awesome_unit_tests.cpp)
+target_link_libraries(awesome_unit_tests PUBLIC awesome::awesome)
+add_test(NAME AwesomeUnitTests COMMAND awesome_unit_tests)
