Better hello_world/CMakeLists.txt

--- a/hello_world/CMakeLists.txt
+++ b/hello_world/CMakeLists.txt
@@ -1,7 +1,11 @@
 # Recommended practice:
 # Do NOT use a variable for the name of the executable
-add_executable(hello_world hello_world.cpp)
+add_executable(hello_world)
 
 # Recommended practice:
 # Always specify PRIVATE, PUBLIC, or INTERFACE keywords
-target_link_libraries(hello_world PUBLIC awesome::awesome)
+target_sources(hello_world PRIVATE hello_world.cpp)
+
+# Recommended practice:
+# Always specify PRIVATE, PUBLIC, or INTERFACE keywords
+target_link_libraries(hello_world PRIVATE awesome::awesome)
