--- a/packaging/CMakeLists.txt
+++ b/packaging/CMakeLists.txt
@@ -1,2 +1,17 @@
 install(TARGETS hello_world awesome)
 install(TARGETS awesome FILE_SET api)
+
+
+set(CPACK_PACKAGE_NAME CMakeExamples)
+set(CPACK_PACKAGE_VENDOR BroCompany)
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "An awesome exampe of awesomeness")
+set(CPACK_PACKAGE_INSTALL_DIRECTORY ${CPACK_PACKAGE_NAME})
+set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
+set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
+set(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})
+set(CPACK_VERBATIM_VARIABLES YES)
+set(CPACK_PACKAGE_DESCRIPTION_FILE ${CMAKE_CURRENT_LIST_DIR}/Description.txt)
+set(CPACK_RESOURCE_FILE_WELCOME ${CMAKE_CURRENT_LIST_DIR}/Welcome.txt)
+set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_CURRENT_LIST_DIR}/License.txt)
+set(CPACK_RESOURCE_FILE_README ${CMAKE_CURRENT_LIST_DIR}/Readme.txt)
+include(CPack)
