Move install() commands near to their respective target declarations

--- a/src/awesome/CMakeLists.txt
+++ b/src/awesome/CMakeLists.txt
@@ -39,3 +39,6 @@ add_library(awesome::awesome ALIAS awesome)
 add_executable(awesome_unit_tests awesome_unit_tests.cpp)
 target_link_libraries(awesome_unit_tests PUBLIC awesome::awesome)
 add_test(NAME AwesomeUnitTests COMMAND awesome_unit_tests)
+
+install(TARGETS awesome)
+install(TARGETS awesome FILE_SET HEADERS)
